--- a/package.json
+++ b/package.json
@@ -9,29 +9,20 @@
   },
 
   "dependencies": {
-
     "body-parser": "^1.20.1",
-
     "cors": "^2.8.5",
-
     "express": "^4.18.2",
-
     "mongoose": "^6.9.0",
-
-    "serverless-http": "^3.1.1"
-
+    "serverless-http": "^3.1.1",
+    "dotenv": "^16.0.3"
   },
 
   "devDependencies": {
 
-    "dotenv": "^16.0.3",
 
     "mocha": "^10.2.0",
-
     "nodemon": "^2.0.20",
-
     "serverless-offline": "^12.0.4",
-
     "supertest": "^6.3.3"
 
   },
