--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_URL=mongodb+srv://hairofthedom_admin:cCrAyZ7vXmi2ghD@cluster0.t0mx72r.mongodb.net/?retryWrites=true&w=majority
+DB_URL=mongodb+srv://admin:xxxxxxxxxxxxxxxxxxxxxxxx@cluster0.t0mx72r.mongodb.net/?retryWrites=true&w=majority
 LOCAL_SERVER=node
 NODE_ENV=development
